# crypto_tracker

./: README.md  db.py  db.sqlite3  gui.py  main.py  pyproject.toml
api/: helpers.py  models.py  mysecrets.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_favoritecrypto_date_added_as_fav.py  0003_alter_favoritecrypto_date_added_as_fav.py  0004_alter_favoritecrypto_date_added_as_fav.py  0005_alter_favoritecrypto_date_added_as_fav.py  0006_alter_favoritecrypto_date_added_as_fav.py  0007_alter_favoritecrypto_date_added_as_fav.py  0008_alter_favoritecrypto_date_added_as_fav.py  0009_alter_favoritecrypto_date_added_as_fav.py  0010_alter_favoritecrypto_date_added_as_fav.py
authentication/: admin.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_auto_20211116_0520.py  0003_alter_profile_created_at.py  0004_auto_20211210_1855.py
config/: settings.py  urls.py
crypto_tracker/: gui.py  main.py  test.py
home/: urls.py  views.py
member/: admin.py  forms.py  models.py  urls.py  views.py
member/migrations/: 0001_initial.py  0002_auto_20211210_1900.py  0003_alter_memberprofile_created_at.py  0004_alter_memberprofile_created_at.py  0005_alter_memberprofile_created_at.py  0006_alter_memberprofile_created_at.py  0007_alter_memberprofile_created_at.py  0008_alter_memberprofile_created_at.py  0009_alter_memberprofile_created_at.py
messaging/: admin.py  forms.py  models.py  urls.py  views.py
templates/: api_dashboard.html  base.html  generic_form.html  home.html  messaging.html  notifications.html  profile.html
(+5 files in other folders)
