[tool.poetry]
name = "crypto"
version = "0.1.0"
description = ""
authors = ["Jacob-Short <thatmanjshort@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
argparse = "^1.4.0"
PySimpleGUI = "^4.47.0"
PySimpleGUIQt = "^0.35.0"
mysqlclient = "^2.0.3"
mysql = "^0.0.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
